--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+src/config.json
 
 # Created by https://www.gitignore.io/api/git,node,linux,macos,windows,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=git,node,linux,macos,windows,visualstudiocode
